# haskell-ats

./: .ghcid  .gitattributes  .gitignore  .hlint.yaml  .travis.yml  README.md  Setup.hs  atspkg.dhall  cabal.project.local  pkg.dhall  shake.hs  template.toml  {{ project }}.cabal
ats-src/: {{ project }}.dats
bench/: Bench.hs
src/: Lib.hs
test/: Spec.hs
