name:                {{ project }}
version:             {{ version }}
-- synopsis:
-- description:
homepage:            https://github.com/{{ github_username }}/{{ project }}#readme
license:             {{ license }}
license-file:        LICENSE
author:              {{ name }}
maintainer:          {{ email }}
copyright:           Copyright: (c) {{ year }} {{ name }}
--category:            Web
build-type:          Custom
extra-doc-files:     README.md
cabal-version:       1.18

Flag development {
  Description: Enable `-Werror`
  manual: True
  default: False
}

custom-setup
  setup-depends:      base >= 4.7 && < 5, 
                      ats-pkg >= 2.6.1.0,
                      Cabal

library
  extra-libraries:     {{ project }}
  extra-lib-dirs:      ./dist-newstyle/lib
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  if flag(development)
    ghc-options:       -Werror
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat 
  ghc-options:         -Wall

test-suite {{ project }}-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , {{ project }}
                     , hspec
  if flag(development)
    ghc-options: -Werror
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat 
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

benchmark {{ project }}-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , {{ project }}
                     , criterion
  if flag(development)
    ghc-options: -Werror
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat 
  ghc-options:         -Wall -optc-mtune=native -optc-flto
  default-language:    Haskell2010

executable {{ project }}
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , {{ project }}
  default-language:    Haskell2010
  if flag(development)
    ghc-options: -Werror
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

source-repository head
  type:     git
  location: https://github.com/{{ github_username }}/{{ project }}
